--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li><a href="letter.html">글</a></li>
     <li><a href="it.html">IT</a></li>
   </ol>
-  <img src= "coding.jpg" >
+  <img src= "couple.png" >
   <h2>소개</h2>
   <p>환갑을 1년 앞두고 홈페이지를 만들었습니다. 돌아보니 나 자신만을 위한 삶이었고 실수와 이기심으로 범벅된 그런 인생을 살았습니다.
     이제 그리스도 예수그리스도의 사랑을 체험하고 무엇이 사랑인지 알기 시작하였습니다.예수님의 말씀을 청종하는 것이 생명임을 알았습니다.
