--- a/God.html
+++ b/God.html
@@ -18,6 +18,16 @@
       <li><a href="it.html">IT</a></li>
     </ol>
     <div id="article">
-  <h2>IT 관련 글과 사진입니다.</h2>
+      <h2>하나님은 누구신가?</h2>
+      <p>
+          우리는 지혜가 모자라 그의 어떠하심을 온전히 알 수가 없으나, <br>
+          조금이나마 내가 아는 것은 <br>
+          사랑이시며 공의의 하나님이시다. <br>
+          그는 전능하시며 영원하시다. <br>
+          하나님은 그의 백성에게 언약의 말씀을 주시어 구원하시고 새롭게 하신다 <br>
+          그리고 영원한 하나님의 나라에 거하게 하신다.
+      </p>
+  </div>
+</div>
 </body>
 </html>
