--- a/picture.html
+++ b/picture.html
@@ -3,14 +3,28 @@
 <head>
   <title>jwjeong-homepage</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>사진모음입니다.</h1>
-  <ol>
-    <li><a href="homepage.html">홈페이지</a></li>
-    <li><a href="letter.html">글</a></li>
-    <li><a href="it.html">IT</a></li>
-  </ol>
+  <div id="header">
+    <h1>정종원 홈페이지에 오신걸 환영합니다.</h1>
+  </div>
+
+  <div id="grid">
+
+    <ol>
+      <li><a href="God.html">하나님</a></li>
+      <li><a href="index.html">소개</a></li>
+      <li><a href="picture.html">사진</a></li>
+      <li><a href="letter.html">글</a></li>
+      <li><a href="it.html">IT</a></li>
+    </ol>
+    <div id="article">
   <h2>사진모음</h2>
+  <img src="picture/couple.jpg" alt="아내와함께">
+  <img src="picture/nway.jpg" alt="노르웨이에서">
+  <img src="picture/coding.jpg" alt="">
+  <img src="picture/정종원.jpg" alt="">
+  <img src="picture/sunghun.jpg" alt="손자">
 </body>
 </html>
