--- a/english.html
+++ b/english.html
@@ -18,6 +18,6 @@
       <li><a href="it.html">IT</a></li>
     </ol>
     <div id="article">
-  <h2>우리의 주 예수그리스도와 저의 이야기 모음입니다..</h2>
+  <h2>영어관련 글입니다</h2>
 </body>
 </html>
