--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <li><a href="picture.html">사진</a></li>
       <li><a href="letter.html">글</a></li>
       <li><a href="it.html">IT</a></li>
+      <li><a href="english.html">영어</a></li>
     </ol>
     <div id="article">
     <h2>소개</h2>
