--- a/letter.html
+++ b/letter.html
@@ -16,6 +16,7 @@
       <li><a href="picture.html">사진</a></li>
       <li><a href="letter.html">글</a></li>
       <li><a href="it.html">IT</a></li>
+      <li><a href="english.html">영어</a></li>
     </ol>
     <div id="article">
   <h2>우리의 주 예수그리스도와 저의 이야기 모음입니다..</h2>
