--- a/picture.html
+++ b/picture.html
@@ -18,6 +18,7 @@
       <li><a href="picture.html">사진</a></li>
       <li><a href="letter.html">글</a></li>
       <li><a href="it.html">IT</a></li>
+      <li><a href="english.html">영어</a></li>
     </ol>
     <div id="article">
   <h2>사진모음</h2>
