--- a/index.html
+++ b/index.html
@@ -4,19 +4,14 @@
   <title>jwjeong-homepage</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
+  <script src="colors.js">
+  </script>
 </head>
 <body>
     <h1>정종원 홈페이지에 오신걸 환영합니다.</h1>
-    <input id="night_day" type="button" value="night" onclick="
-     if(document.querySelector('#night_day').value==='night'){
-       document.querySelector('body').style.backgroundColor='skyblue';
-       document.querySelector('body').style.color='white';
-       document.querySelector('#night_day').value='day';
-     } else {
-       document.querySelector('body').style.backgroundColor='white';
-       document.querySelector('body').style.color='black';
-       document.querySelector('#night_day').value='night';
-     }">
+    <input type="button" value="night" onclick="
+    nightDayHandler(this);
+    ">
 
   <div id="grid">
     <ol>
