--- a/picture.html
+++ b/picture.html
@@ -4,10 +4,15 @@
   <title>jwjeong-homepage</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
+  <script src="colors.js">
+  </script>
 </head>
 <body>
   <div id="header">
     <h1>정종원 홈페이지에 오신걸 환영합니다.</h1>
+    <input type="button" value="night" onclick="
+    nightDayHandler(this);
+    ">
   </div>
 
   <div id="grid">
