--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        }
     
       header {
-            background: url(picture/mountain.jpg);
+            background: url(picture/matM.jpg);
             color: orange;
             font-size: 20px;
             font-weight: bold;
